tests/aster/x/mochi/rosetta/doomsday-rule.error
error[A026]: argument 1 to parseIntStr type mismatch: string vs any
  --> /workspace/mochi/tests/rosetta/x/Mochi/doomsday-rule.mochi:65:29

 65 |     let y = parseIntStr(date[0:4])
    |                             ^

help:
  Ensure arguments match parameter types
